[project]
name = "pUUID"
version = "1.0.0"
license = "LGPL-3.0-only"
description = "Prefixed UUID's for Python with Pydantic & SQLAlchemy support."
readme = "README.md"
authors = [
    { name = "Jendrik Potyka", email = "jpotyka@digon.io" },
    { name = "Fabian Preiss", email = "fpreiss@digon.io" },
]
requires-python = ">=3.13"
dependencies = ["pydantic>=2.12.5"]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.12.0",
    "coverage>=7.13.1",
    "isort>=7.0.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
    "sqlalchemy[mypy]>=2.0.45",
]
sqlalchemy = ["sqlalchemy>=2.0.45"]
